tests/sumo/errors/missing_first_param/errors.sumo.meso
Error: File '--mesosim' is not accessible (No such file or directory).
Quitting (on error).
